--- a/style.css
+++ b/style.css
@@ -56,20 +56,80 @@ a:hover {
     color: rgb(221, 221, 221);
 }
 
+.menu{
+  transition: 0.3s all ease;
+  position: absolute;
+  width: 260px;
+  left: 100%;
+  height: 100%;
+  background-color: #24292f;
+  z-index: 9999;
+  list-style: none;
+}
+
+.menu__item{
+  font-size: 1.4rem;
+  color: #fff;
+  border-bottom: 1px solid #333;
+  padding: 1.4rem;
+  transition: 0.3s all ease;
+}
+
+.menu__item:hover{
+  opacity: 0.5;
+}
+
+.open{
+  left: 65%;
+}
+
+.hide{
+  display: none;
+}
+
 .hamburger{
-
+  display: none;
+  grid-column: 3;
+  align-self: center;
+  justify-self: center;
+  top: 10px;
+  right: -50px;
 }
 
-.first-bar{
-
+.hamburger span{
+  display: block;
+  position: relative;
+  background-color: #fff;
+  height: 6px;
+  width: 36px;
+  border-radius: 2px;
+  transition: 0.3s;
+  margin: 6px 0;
+  cursor: pointer;
 }
 
-.second-bar{
-
+.change.first-bar{
+  top: 11px;
+  transform: rotate(45deg);
 }
 
-.third-bar{
+.change.second-bar{
+  opacity: 0;
+}
 
+.change.third-bar{
+  bottom: 13px;
+  transform: rotate(-45deg);
+}
+
+@media (max-width: 600px) {
+  .nav__items{
+    display: none;
+  }
+
+  .hamburger{
+    display: initial;
+  }
 }
 /* End Nav */
 
@@ -79,6 +139,8 @@ a:hover {
     display: grid;
     align-items: center;
     justify-items: center;
+    padding: 2rem;
+    transition: 0.3 all ease;
 }
 
 #particles-js {
