--- a/style.css
+++ b/style.css
@@ -32,10 +32,14 @@ html{
     color: #fff;
 }
 
+.nav h1{
+  margin-left: 1.5rem;
+}
+
 .logo {
     display: grid;
     align-items: center;
-    padding-left: 1.5rem;
+    /* padding-left: 1.5rem; */
     font-family: Rubik, sans-serif;
     cursor: pointer;
 }
@@ -148,6 +152,11 @@ a:hover {
 
 
 /* Start Home Content */
+@media (max-width: 600px) {
+  .content__text{
+    font-size: 14px;
+  }
+}
 .wrapper {
     display: grid;
     grid-template-rows: repeat(auto-fit,minmax(min-content, 100vh));
@@ -182,7 +191,6 @@ a:hover {
 
 .content__text{
     color: #fff;
-    width: 400px;
     animation: glow2 2s ease-in-out infinite alternate;
     text-align: center;
     align-items: start;
@@ -243,14 +251,21 @@ a:hover {
 }
 /* End  Home Content*/
 /* Start About */
-
+@media (max-width: 600px) {
+  .about__text{
+    font-size: 14px;
+  }
+  .about__quote{
+    width: 300px;
+    font-size: 16px;
+  }
+}
 .about{
   box-sizing: border-box;
   background-color: #24292f;
   color: #fff;
   align-items: center;
   height: fit-content;
-  padding: 2rem;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
